--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.16 Sun, 11 Apr 1999 15:46:45 +0200 verna $
+% PRCS: $Id: fixme.dtx 1.17 Sun, 11 Apr 1999 16:17:22 +0200 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -55,14 +55,14 @@
 % \CheckSum{179}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{v$PackageVersion$}"$
-% \newcommand{\packageversion}{v1.1-b14}
+% \newcommand{\packageversion}{v1.1-b15}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/04/11}
 % \MakeShortVerb{\|}
 % \date{\today}
-% \title{\textsf{FiXme} -- a \LaTeXe{} package fort inserting fixme notes
+% \title{\textsf{FiXme} -- a \LaTeXe{} package for inserting fixme notes
 % in draft documents \thanks{This document describes \textsf{FiXme}
-% \packageversion , last updated \packagedate .}}
+% \packageversion, last updated \packagedate.}}
 % \author{Didier Verna\\
 % |mailto:verna@inf.enst.fr|\\
 % |http://www.inf.enst.fr/\~{}verna|}
@@ -197,7 +197,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 ¡ $Format: "\\ProvidesPackage{fixme}[$PackageDate$ v$PackageVersion$ Fixme notes in your document]"$
-\ProvidesPackage{fixme}[1999/04/11 v1.1-b14 Fixme notes in your document]
+\ProvidesPackage{fixme}[1999/04/11 v1.1-b15 Fixme notes in your document]
 
 %    \end{macrocode}
 % Booleans that will control the behavior of the |\fixme{}| macro. By default,
